--- a/workbenchfx-core/src/main/resources/com/dlsc/workbenchfx/css/main.css
+++ b/workbenchfx-core/src/main/resources/com/dlsc/workbenchfx/css/main.css
@@ -101,6 +101,7 @@
     -fx-background-color: -primary-variant-color; }
 
 #toolbar .icon, .navigation-drawer .drawer-box .header .icon {
+  -fx-alignment: CENTER;
   -fx-background-color: transparent;
   -icon-size: 40px;
   -fx-max-width: -icon-size;
